@@ -1288,6 +1288,8 @@ PeersView.menu.kickandban=Kick and Ban
 PeersView.menu.kickandban.reason=Peer manually banned
 PeersView.state=State
 PeersView.state.info=State of the peer connection
+PeersView.state.pending=Pending
+PeersView.state.connecting=Connecting
 PeersView.state.handshake=Waiting for handshake
 PeersView.state.bitfield=Waiting for bitfield
 PeersView.state.established=Fully established
@@ -1317,5 +1319,6 @@ ConfigView.section.interface.confirm_torrent_removal.tooltip=Confirm when Removi
 MyTorrentsView.confirm_torrent_removal=Are you sure you want to remove?\n
 MyTorrentsView.seed_to_peer_ratio=Seed2PeerRatio
 MyTorrentsView.seed_to_peer_ratio.info=Total swarm seeds to peers ratio
+
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
